--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -37,7 +37,7 @@ jobs:
         git config --global pull.rebase false
         git config --global --list
     - name: Load upstream commits
-      run: git pull https://github.com/lede-project/source --log --no-commit
+      run: git pull https://github.com/lede-project/source.git --log --no-commit
 
     - name: Apply commit changes
       run: |
